<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackgroundColor"
    tools:context="com.deccanplast.app.deccanplastindustries.OrderActivity">

    <LinearLayout style="@style/RootLinear">

        <TextView
            style="@style/OrderLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_name" />

        <EditText
            android:id="@+id/name"
            style="@style/OrderFields"
            android:hint="@string/name_hint" />

        <TextView
            style="@style/OrderLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_phone" />

        <EditText
            android:id="@+id/phone"
            style="@style/OrderFields"
            android:hint="@string/phone_hint"
            android:inputType="phone" />

        <TextView
            style="@style/OrderLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_address" />

        <EditText
            android:id="@+id/address"
            style="@style/OrderFields"
            android:hint="@string/address_hint" />

        <TextView
            style="@style/OrderLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_city" />

        <EditText
            android:id="@+id/city"
            style="@style/OrderFields"
            android:hint="@string/city_hint" />

        <TextView
            style="@style/OrderLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_pincode" />

        <EditText
            android:id="@+id/pincode"
            style="@style/OrderFields"
            android:hint="@string/pincode_hint" />


        <TextView
            android:id="@+id/product"
            style="@style/OrderHeading"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-medium" />

        <TextView
            android:id="@+id/colorsHeading"
            style="@style/OrderHeading"
            android:fontFamily="sans-serif-medium"
            android:text="@string/colorsAvailable" />

        <Spinner
            android:id="@+id/colorSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

        </Spinner>

        <TextView
            style="@style/OrderHeading"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/quanity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrement_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/colorDeccanBlue"
                android:text="@string/decrement_btn"
                android:textColor="@color/whiteText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/default_quantity"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/increment_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/colorDeccanBlue"
                android:text="@string/increment_btn"
                android:textColor="@color/whiteText"
                android:textStyle="bold" />


        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorDeccanBlue"
            android:padding="16dp"
            android:text="@string/send_enquiry"
            android:textColor="@color/whiteText" />

    </LinearLayout>
</ScrollView>

